--- a/src/Components/Sales/Sales.css
+++ b/src/Components/Sales/Sales.css
@@ -11,6 +11,7 @@
     text-align: center;
     width: 100%;
     border: 1px solid black;
+    border-radius: 10px;
     padding-bottom: 20px;
 }
 .sales-item-div h1{
@@ -19,6 +20,7 @@
 }
 .sales-item-div img{
     height: 250px;
+    border-radius: 10px;
 }
 .sales-btn{
     padding: 0 20px;
