mobile responsive added

--- a/src/Components/Platforms/Platforms.css
+++ b/src/Components/Platforms/Platforms.css
@@ -51,7 +51,7 @@
   width: 80%;
 }
 
-.car-explore-btn-div {
+.car-explore-btn-div-faq {
   width: 50%;
   margin-bottom: 3%;
 }
@@ -84,14 +84,14 @@
     font-size: 0.9rem;
   }
 
-  .car-explore-btn-div {
+  .car-explore-btn-div-faq {
     width: 100% !important;
     display: flex;
     flex-direction: row;
     gap: 10px;
   }
 
-  .car-explore-btn-div button {
+  .car-explore-btn-div-faq button {
     width: 100%; /* full-width buttons */
   }
 }
