--- a/src/Components/Brands/Brands.css
+++ b/src/Components/Brands/Brands.css
@@ -4,11 +4,20 @@
   align-items: center;
   gap: 20px;
 }
-
-.img-item-div {
-  height: 100px;
-  width: 250px;
+.brands-div{
+    display: flex;
+    flex-direction: column;
+    margin: 0;
+    padding: 0;
+}
+.line{
   border-top: 1px solid white;
+  width: 100%;
+  height: 0;
+}
+.img-item-div {
+  height: 50px;
+  width: 250px;
   margin-top: 3%;
   flex: 1 1 200px; /* make items flexible */
   display: flex;
@@ -17,7 +26,7 @@
 }
 
 .img-item-div img {
-  margin-top: 5%;
+  margin-top: 0%;
   height: 100%;
   width: 100%;
   object-fit: contain;
