--- a/src/Components/HeroSection/HeroSection.css
+++ b/src/Components/HeroSection/HeroSection.css
@@ -1,7 +1,7 @@
 .hero-section-data-div {
   display: flex;
   background-color: #005bd4;
-  height: 504px;
+  max-height: 504px;
 }
 .hero-image {
   position: relative;
