--- a/src/Components/AnnoncementSection/AnnoncementSection.css
+++ b/src/Components/AnnoncementSection/AnnoncementSection.css
@@ -2,9 +2,10 @@
   background: #005BD4;
   display: flex;
   flex-direction: row;
+  margin-top: 10px;
   gap: 20px;
   align-items: center;
-  padding: 2.5rem 6% 20px 6%;
+  padding: 20px 6%;
 }
 
 .Announcement-header-mobile {
