--- a/src/Components/Brands/Brands.css
+++ b/src/Components/Brands/Brands.css
@@ -2,7 +2,22 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  gap: 20px;
+  gap: 10px;
+}
+.brand-container{
+  display: flex;
+    background-image: url(../../Assets/homeImage/bgImage.jpg);
+  background-size: cover;
+  background-position: center;
+  width: 100%;
+  height: 450px;
+  margin-top: 3%;
+  color: white;
+  flex-direction: column; /* stack text and buttons vertically */
+  justify-content: space-between; /* vertical center */
+  padding: 40px 0px;
+  align-items: center;     /* horizontal center */
+  text-align: center;      
 }
 .brands-div{
     display: flex;
@@ -18,7 +33,6 @@
 .img-item-div {
   height: 50px;
   width: 250px;
-  margin-top: 3%;
   flex: 1 1 200px; /* make items flexible */
   display: flex;
   justify-content: center;
@@ -26,10 +40,30 @@
 }
 
 .img-item-div img {
-  margin-top: 0%;
+  margin-top: 5%;
   height: 100%;
   width: 100%;
   object-fit: contain;
+}
+
+.marquee1 {
+  overflow: hidden;
+  position: relative;
+  width: 100%;
+}
+
+.marquee1-content {
+  display: flex;
+  align-items: center;
+  height: 10vh;
+  gap: 3rem;
+  width: max-content; /* ensure it grows properly */
+  animation: marquee 60s linear infinite; /* slower speed */
+}
+
+@keyframes marquee {
+  0% { transform: translateX(0); }
+  100% { transform: translateX(-100%); } /* move full width */
 }
 
 /* Mobile Responsive */
