--- a/src/Components/Industry/Industry.css
+++ b/src/Components/Industry/Industry.css
@@ -1,6 +1,5 @@
 .industry-container {
   padding: 3% 0;
-  background-color: #ECECEC;
 }
 
 .industry-card-div {
@@ -18,6 +17,7 @@
   box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
   text-align: center;
   border-radius: 10px;
+  transition: all 0.3s ease;
   flex-shrink: 0; /* ✅ ensures card doesn’t shrink in horizontal scroll */
 }
 
@@ -25,6 +25,9 @@
   width: 100%;
   height: 300px;
   border-radius: 10px;
+}
+.industry-card:hover{
+  transform: translateY(-5px) scale(1.02);
 }
 
 /* ✅ Mobile horizontal scroll */
